# Kinect4Slicer

./: .gitignore  CMakeLists.txt
Kinect4Slicer/: CMakeLists.txt  qSlicerKinect4SlicerModule.cxx  qSlicerKinect4SlicerModule.h  qSlicerKinect4SlicerModuleWidget.cxx  qSlicerKinect4SlicerModuleWidget.h
Kinect4Slicer/Kinect/v1.5/inc/: NuiImageCamera.h  NuiSensor.h  NuiSkeleton.h
Kinect4Slicer/Logic/: vtkSlicerKinect4SlicerLogic.cxx  vtkSlicerKinect4SlicerLogic.h
Kinect4Slicer/MRML/: CMakeLists.txt  vtkMRMLKinect4SlicerNode.cxx  vtkMRMLKinect4SlicerNode.h  vtkMRMLKinectPositionNode.cxx  vtkMRMLKinectPositionNode.h
Kinect4Slicer/Resources/: qSlicerKinect4SlicerModule.qrc
Kinect4Slicer/Resources/UI/: qSlicerKinect4SlicerFooBarWidget.ui  qSlicerKinect4SlicerModuleWidget.ui
Kinect4Slicer/Widgets/: qSlicerKinect4SlicerFooBarWidget.cxx  qSlicerKinect4SlicerFooBarWidget.h
